--- a/about.html
+++ b/about.html
@@ -7,10 +7,10 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-    <header class="bg-green-200">
-        <a href="about.html" class="hover:text-blue-500">About</a>
-        <a href="Projects.html" class="hover:text-blue-500">Projects</a>
-        <a href="connect.html" class="hover:text-blue-500">Connect</a>
+    <header class="bg-green-200 flex justify-end p-4">
+        <a href="about.html" class="hover:text-blue-500 pl-2 ">About</a>
+        <a href="Projects.html" class="hover:text-blue-500 pl-2">Projects</a>
+        <a href="connect.html" class="hover:text-blue-500 pl-2">Connect</a>
     </header>
 </body>
 </html>
