--- a/index.html
+++ b/index.html
@@ -6,19 +6,25 @@
     <title>Responsive Landing Page</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
-        body{
+        .hero-section{
             background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQRCaOJGwxeLwxraiqtFS6qh0WnHApz3iZJRw&s');
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center;
+            height:100vh;
         }
     </style>
 </head>
 <body>
-    <header class="bg-green-200">
-        <a href="about.html" class="hover:text-blue-500">About</a>
-        <a href="Projects.html" class="hover:text-blue-500">Projects</a>
-        <a href="connect.html" class="hover:text-blue-500">Connect</a>
+    <header class="bg-green-200 flex justify-end p-4">
+        <a href="about.html" class="hover:text-blue-500 pl-2 ">About</a>
+        <a href="Projects.html" class="hover:text-blue-500 pl-2">Projects</a>
+        <a href="connect.html" class="hover:text-blue-500 pl-2">Connect</a>
     </header>
-    <div class="text-center justify-center">
-        <h1 class="text-3xl text-bold">Welcome to my website</h1>
+    <div class="hero-section flex flex-col item-center justify-center text-center p-6">
+        <h1 class="text-3xl font-bold text-white">Welcome to my website</h1>
+        <br>
+        <h1 class="text-2xl font-semiblod text-white ">In this website I will help you you to navigate through best youtube resourse to learn skills</h1>
     </div>
 </body>
 </html>
