--- a/Projects.html
+++ b/Projects.html
@@ -9,8 +9,11 @@
 <body>
     <header class="bg-green-200 flex justify-end p-4">
         <a href="about.html" class="hover:text-blue-500 pl-2 ">About</a>
-        <a href="Projects.html" class="hover:text-blue-500 pl-2">Projects</a>
+        <a href="index.html" class="hover:text-blue-500 pl-2">Index</a>
         <a href="connect.html" class="hover:text-blue-500 pl-2">Connect</a>
     </header>
+    <footer class="bg-gray-400">
+        <p class="text-center text-white-400">© 2025 My Website</p>
+    </footer>
 </body>
 </html>
