--- a/index.html
+++ b/index.html
@@ -26,5 +26,8 @@
         <br>
         <h1 class="text-2xl font-semiblod text-white ">In this website I will help you you to navigate through best youtube resourse to learn skills</h1>
     </div>
+    <footer class="bg-gray-400">
+        <p class="text-center text-white-400">© 2025 My Website</p>
+    </footer>
 </body>
 </html>
