added ccontent in channel.html,connect.html,about.html and changed file name projects.html to channel.html

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <header class="bg-green-200 flex justify-end p-4">
         <a href="about.html" class="hover:text-blue-500 pl-2 ">About</a>
-        <a href="Projects.html" class="hover:text-blue-500 pl-2">Projects</a>
+        <a href="channel.html" class="hover:text-blue-500 pl-2">Channels</a>
         <a href="connect.html" class="hover:text-blue-500 pl-2">Connect</a>
     </header>
     <div class="hero-section flex flex-col item-center justify-center text-center p-6">
