--- a/connect.html
+++ b/connect.html
@@ -9,9 +9,24 @@
 <body>
     <header class="bg-green-200 flex justify-end p-4">
         <a href="about.html" class="hover:text-blue-500 pl-2 ">About</a>
-        <a href="Projects.html" class="hover:text-blue-500 pl-2">Projects</a>
+        <a href="channel.html" class="hover:text-blue-500 pl-2">Channels</a>
         <a href="index.html" class="hover:text-blue-500 pl-2">Index</a>
     </header>
+    <h1 class="text-3xl font-bold">Connect With Us</h1>
+     <section>
+      <h2 class="text-xl font-semibold">Missed Any Subject?</h2>
+      <p class="text-gray-700">
+        If we missed any subjects, kindly mail us at:
+      </p>
+      <p class="text-blue-600 font-medium">rajeshbhojannagari@gmail.com</p>
+    </section>
+    <section>
+      <h2 class="text-xl font-semibold">Connect Through LinkedIn</h2>
+      <a href="https://www.linkedin.com/in/rajesh-bhojannagari-9a4779282/" 
+         class="text-blue-600 font-medium hover:text-blue-800 underline">
+        LinkedIn Profile
+      </a>
+    </section>
     <footer class="bg-gray-400">
         <p class="text-center text-white-400">© 2025 My Website</p>
     </footer>
